# Agricultural-robot-modules

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  convert_to_yolo.py  cwfid.yaml  docker-compose.yml  requirements.txt  split_dataset.py
config/: ml_models_settings.py  redis_settings.py
data/: commands.json
models/: deeplab_mnv3.py  detect_model.py
schemas/: detect.py
src/: CMakeLists.txt
src/QGeoView/: CMakeLists.txt
src/QGeoView/Map/: CMakeLists.txt  Contour.cpp  Contour.h  ContourPreviewDialog.cpp  ContourPreviewDialog.h  GeoPolyline.cpp  GeoPolyline.h  GeoViewDrawing.cpp  GeoViewDrawing.h  GeoViewRouteLogic.cpp  GeoViewRouteLogic.h  GeoViewToolbar.cpp  GeoViewToolbar.h  GeoViewWidget.cpp  GeoViewWidget.h  ObservaionsLayer.cpp  ObservaionsLayer.h  ObservationPoint.cpp  ObservationPoint.h  TestJson.h  main.cpp
src/QGeoView/shared/: CMakeLists.txt
src/agroscout_control/: package.xml  setup.cfg  setup.py
src/agroscout_control/agroscout_control/: command_executor.py
src/app/: Application.cc  Application.h  CMakeLists.txt  MLService.h  RobotService.h  widget.cc  widget.cpp  widget.h
src/database/: CMakeLists.txt
src/database/sql/: schema.sql
src/database/sqlitedb/: sqlitedb.cpp  sqlitedb.h
src/manager/: logmanager.h  manager.cpp  manager.h
src/network/: CMakeLists.txt  client.cpp
src/network/protocols/: Base.h  Http.cc  Http.h
state/: robot_state.py
tests/: conftest.py  test_basic_endpoints.py  test_error_requests.py  test_ml_service.py  test_ordering.py
wheat_disease_classification/: README.md  class_names.txt  evaluate.py  evaluate_train.py  infer.py  requirements.txt  train.py
yolo_labels/: 001_image.txt  002_image.txt  003_image.txt  004_image.txt  005_image.txt  006_image.txt  007_image.txt  008_image.txt  009_image.txt  010_image.txt  011_image.txt  012_image.txt  013_image.txt  014_image.txt  015_image.txt  016_image.txt  017_image.txt  018_image.txt  019_image.txt  020_image.txt  021_image.txt  022_image.txt  023_image.txt  024_image.txt  025_image.txt  026_image.txt  027_image.txt  028_image.txt  029_image.txt  030_image.txt  031_image.txt  032_image.txt  033_image.txt  034_image.txt  035_image.txt  036_image.txt  037_image.txt  038_image.txt  039_image.txt  040_image.txt  (+20 more)
